ID-4914: Hibernate 6.6 throws Exception on merge when user with generatedID does not exist instead of just merge/insert as before: https://docs.jboss.org/hibernate/orm/6.6/migration-guide/migration-guide.html#merge-versioned-deleted